k8s/ci-build.deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-build-deployment
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ci-build
  template:
    metadata:
      labels:
        run: ci-build
      namespace: ${NAMESPACE}
    spec:
      containers:
      - env:
        - name: BUILD_NUMBER
          value: "1"
        - name: AUTOCLEAN_EXEMPTION_REGEX
          value: ./\(HL7\|FHIR\|IHE\|argonautproject\)/[^/]*/branches/\(main\|master\)
        - name: SSH_AUTHORIZED_KEY
          valueFrom:
            configMapKeyRef:
              key: ssh_authorized_key
              name: ci-build-config
        image: ${CI_BUILD_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        name: ci-build
        volumeMounts:
        - mountPath: /home/fhir_upload/uploading
          name: fhir-ci-build-disk
      - image: ${CADDY_IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        name: caddy
        volumeMounts:
        - name: fhir-ci-build-disk
          mountPath: /var/www
          subPath: www
        - name: caddy-cert-disk
          mountPath: /data
        - name: caddy-conf-volume
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
${NODE_SELECTOR_CONFIG}
      volumes:
${VOLUMES_CONFIG}
      - configMap:
          defaultMode: 420
          name: caddy-conf-volume
        name: caddy-conf-volume
