k8s/ci-build.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-build-deployment
  namespace: fhir
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ci-build
  template:
    metadata:
      labels:
        run: ci-build
      namespace: fhir
    spec:
      containers:
      - env:
        - name: BUILD_NUMBER
          value: "1"
        - name: AUTOCLEAN_EXEMPTION_REGEX
          value: ./\(HL7\|FHIR\|IHE\|CodeX-HL7-FHIR-Accelerator\|argonautproject\)/[^/]*/branches/\(main\|master\)
        - name: SSH_AUTHORIZED_KEY
          valueFrom:
            configMapKeyRef:
              key: ssh_authorized_key
              name: ci-build-config
        image: gcr.io/fhir-org-starter-project/ci-build
        imagePullPolicy: Always
        name: ci-build
        volumeMounts:
        - mountPath: /home/fhir_upload/uploading
          name: fhir-ci-build-disk
      - image: gcr.io/fhir-org-starter-project/caddy-ratelimit:latest
        name: caddy
        volumeMounts:
        - name: fhir-ci-build-disk
          mountPath: /var/www
          subPath: www
        - name: ig-index-volume
          mountPath: /opt/ig-index
          readOnly: true
        - name: caddy-cert-disk
          mountPath: /data
        - name: caddy-conf-volume
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
      - gcePersistentDisk:
          fsType: ext4
          pdName: caddy-cert-disk
        name: caddy-cert-disk
      - gcePersistentDisk:
          fsType: ext4
          pdName: fhir-ci-build-disk
        name: fhir-ci-build-disk
      - configMap:
          defaultMode: 420
          name: caddy-conf-volume
        name: caddy-conf-volume
      - configMap:
          defaultMode: 420
          name: ig-index-volume
        name: ig-index-volume
