k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ci-build-deployment
  namespace: fhir
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: ci-build
      namespace: fhir
    spec:
      containers:
      - image: gcr.io/fhir-org-starter-project/ci-build
        name: ci-build
        volumeMounts:
        - name: fhir-ci-build-disk
          mountPath: /home/fhir_upload/uploading
        - name: nginx-conf-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-conf-volume
          mountPath: /etc/nginx/sites-enabled/default
          subPath: sites-enabled.conf
      volumes:
      - name: fhir-ci-build-disk
        gcePersistentDisk:
          pdName: fhir-ci-build-disk
          fsType: ext4
      - name: nginx-conf-volume
        configMap:
          name: ci-build-config
