k8s/gforge-to-zulip.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gforge-to-zulip
  namespace: fhir
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: gforge-to-zulip
      namespace: fhir
    spec:
      containers:
      - image: gcr.io/fhir-org-starter-project/gforge-to-zulip
        name: gforge-to-zulip
