k8s/hapi-dstu2.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reference-hapi-deployment
  namespace: fhir
spec:
  replicas: 1
  template:
    metadata:
      namespace: fhir
      labels:
        run: reference-hapi
    spec:
      containers:
      - image: syncforscience/reference-api
        name: reference-hapi
        resources:
          limits:
            cpu: .75
            memory: 3G
        livenessProbe:
          httpGet:
            path: /baseDstu2/Patient?
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 10
