k8s/hapi.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reference-hapi-deployment
  namespace: fhir
spec:
  replicas: 1
  template:
    metadata:
      namespace: fhir
      labels:
        run: reference-hapi
    spec:
      containers:
      - image: syncforscience/reference-api
        name: reference-hapi
