k8s/ci-build.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ci-build
  namespace: fhir
  name: ci-build-service
spec:
  ports:
  - port: 443
    name: secureweb
    protocol: TCP
    targetPort: 443
  - port: 80
    name: web
    protocol: TCP
    targetPort: 80
  - port: 81
    name: webcaddy
    protocol: TCP
    targetPort: 81
  - port: 2222
    name: ssh
    protocol: TCP
    targetPort: 22
  selector:
    run: ci-build
  type: LoadBalancer
  loadBalancerIP: 35.190.153.146
