k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: ci-build
  namespace: fhir
  name: ci-build-service
spec:
  externalIPs:
  - 10.142.0.4
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 80
  - port: 2222
    name: ssh
    protocol: TCP
    targetPort: 22
  selector:
    run: ci-build
  type: ClusterIP
